Updated Repetier config

--- a/config/config.json
+++ b/config/config.json
@@ -3,16 +3,16 @@
     "processor": 1,
     "baudrate": 250000,
     "bluetoothSerial": -1,
-    "bluetoothBaudrate": 115200,
+    "bluetoothBaudrate": 250000,
     "xStepsPerMM": 80,
     "yStepsPerMM": 80,
     "zStepsPerMM": 80,
-    "xInvert": 0,
+    "xInvert": "1",
     "xInvertEnable": 0,
     "eepromMode": 1,
-    "yInvert": 0,
+    "yInvert": "1",
     "yInvertEnable": 0,
-    "zInvert": 0,
+    "zInvert": "1",
     "zInvertEnable": 0,
     "extruder": [
         {
@@ -21,12 +21,12 @@
             "pidDriveMin": 40,
             "pidDriveMax": 230,
             "pidMax": 255,
-            "sensorType": 1,
+            "sensorType": 8,
             "sensorPin": "TEMP_0_PIN",
             "heaterPin": "HEATER_0_PIN",
             "maxFeedrate": 100,
             "startFeedrate": 20,
-            "invert": "0",
+            "invert": "1",
             "invertEnable": "0",
             "acceleration": 10000,
             "watchPeriod": 1,
@@ -113,14 +113,14 @@
     "backlashX": 0,
     "backlashY": 0,
     "backlashZ": 0,
-    "stepperInactiveTime": 360,
+    "stepperInactiveTime": 30,
     "maxInactiveTime": 0,
     "xMinPos": 0,
     "yMinPos": 0,
     "zMinPos": 0,
     "xLength": 200,
     "yLength": 200,
-    "zLength": 200.8,
+    "zLength": 181.3,
     "alwaysCheckEndstops": "0",
     "disableX": "0",
     "disableY": "0",
@@ -163,7 +163,7 @@
     "lowTicksPerMove": 250000,
     "enablePowerOnStartup": "0",
     "echoOnExecute": "1",
-    "sendWaits": "1",
+    "sendWaits": "0",
     "ackWithLineNumber": "1",
     "killMethod": 1,
     "useAdvance": "0",
@@ -197,6 +197,13 @@
         "dir": "ORIG_E2_DIR_PIN",
         "enable": "ORIG_E2_ENABLE_PIN"
     },
+    "mirrorZ4": "0",
+    "mirrorZ4Motor": {
+        "name": "Extruder 3",
+        "step": "ORIG_E3_STEP_PIN",
+        "dir": "ORIG_E3_DIR_PIN",
+        "enable": "ORIG_E3_ENABLE_PIN"
+    },
     "dittoPrinting": "0",
     "featureServos": "0",
     "servo0Pin": 11,
@@ -212,7 +219,7 @@
     "uiPrinterName": "RepRap",
     "uiPrinterCompany": "Home made",
     "uiPagesDuration": 4000,
-    "uiAnimation": "0",
+    "uiHeadline": "",
     "uiDisablePageswitch": "1",
     "uiAutoReturnAfter": 30000,
     "featureKeys": "0",
@@ -551,6 +558,7 @@
     "boardFanMinSpeed": 0,
     "doorPin": -1,
     "doorEndstop": 1,
+    "uiAnimation": "0",
     "maxHalfstepInterval": 1999,
     "hasMAX6675": false,
     "hasMAX31855": false,
